# Leafit

./: CMakeLists.txt  Main.qml  documentloadresult.h  documentreader.h  documentreaders.cpp  documentreaders.h  localdocumentloader.cpp  localdocumentloader.h  main.cpp  readercontroller.cpp  readercontroller.h
archive/: ziparchivereader.cpp  ziparchivereader.h  zippathutils.cpp  zippathutils.h
cmake/: verify_install.cmake
diagnostics/: diagnosticservice.cpp  diagnosticservice.h
docs/: ANDROID_PLAN.md
document/: docxcontentrenderer.cpp  docxcontentrenderer.h  epubcontentrenderer.cpp  epubcontentrenderer.h  fb2contentrenderer.cpp  fb2contentrenderer.h  richtextcontent.h  richtextprocessor.cpp  richtextprocessor.h  xmlutils.cpp  xmlutils.h
notes/: NotesCenterDialog.qml  notescentermodel.cpp  notescentermodel.h
platform/: desktopintegration.cpp  desktopintegration.h
reader/: AnnotationsPopup.qml  EmptyReaderView.qml  PdfDocumentView.qml  PdfPasswordDialog.qml  ReaderSidebar.qml  ReaderWorkspace.qml  SelectionActionBar.qml  TextDocumentView.qml  readingannotation.h  readingdocumentformatter.cpp  readingdocumentformatter.h  readingtypography.h
search/: LibrarySearchDialog.qml
shell/: AppHeader.qml  AppShortcuts.qml  ReaderStatusBar.qml  ReaderToolsPopup.qml  ReadingSettingsPopup.qml
storage/: localstatestore.cpp  localstatestore.h  profiledatabase.cpp  profiledatabase.h  readingannotationstore.cpp  readingannotationstore.h
sync/: onedrivelibraryservice.cpp  onedrivelibraryservice.h  portableprofilemapper.cpp  portableprofilemapper.h  profilesyncengine.cpp  profilesyncengine.h  (+2 more)
(+20 files in other folders)
